sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:10: error: not found: value b
	while (b&&c) {
               ^