sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	
var c=true
var d=true
var debut=0
var fin=0
	var a=getNombreValeurs()
	
	while (b&&c) {
		
		c=false
		d=false	
		
		for (i<-debut to a-2-fin) {if (plusPetit(i+1,i)) 
		{echange(i+1,i); d=true }}
		fin=fin+1;

		
		for (j<-fin to a-2-debut) {if (plusPetit(a-1-j,a-2-j)) 
		{echange(a-1-j,a-2-j); c=true }}
		debut=debut+1
		
	}	
	}


